--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
 
-<form action="/courses/edit" method="POST">
+<form action="/courses/edit" method="POST" class="course-form">
   <div class="input-field">
     <input id="title" name="title" type="text" class="validate" required value="{{course.title}}">
     <label for="title">Course Name</label>
@@ -17,5 +17,10 @@
     <span class="helper-text" data-error="Add image URL"></span>
   </div>
   <input type="hidden" name="id" value="{{course.id}}">
-  <button class="btn btn-primary">Edit</button>
+  <button type="submit" class="btn btn-primary">Edit</button>
+</form>
+
+<form action="/courses/remove" method="POST">
+  <input type="hidden" name="id" value="{{course.id}}">
+  <button class="btn red">Delete</button>
 </form>
