--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -15,11 +15,12 @@
       <div class="card-action actions">
         <a href="/courses/{{id}}" target="_blank">Open course</a>
         {{#if @root.isAuth}}
-          <a href="/courses/{{id}}/edit?allow=true">Edit</a>
+          {{#ifeq userId._id @root.userId}}
+            <a href="/courses/{{id}}/edit?allow=true">Edit</a>
+          {{/ifeq}}
           <form action="/cart/add" method="POST">
             <input type="hidden" name="id" value="{{id}}">
             <input type="hidden" name="_csrf" value="{{@root.csrf}}">
-
             <button type="submit" class="btn btn-primary">Add to Cart</button>
           </form>
         {{/if}}
